change workflow signal api response (#10)
* change workflow signal api response

* remove 200 response body only

* remove signal response definition

--- a/iwf.yaml
+++ b/iwf.yaml
@@ -43,10 +43,7 @@ paths:
       responses:
         '200':
           description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/WorkflowSignalResponse'
+          content: {}
         '400':
           description: Invalid input
           content:
@@ -288,9 +285,6 @@ components:
           type: string
         signalValue:
           $ref: '#/components/schemas/EncodedObject'
-    WorkflowSignalResponse:
-      type: object
-      properties: {}
     WorkflowQueryRequest:
       type: object
       required:
