--- a/iwf.yaml
+++ b/iwf.yaml
@@ -613,7 +613,7 @@ components:
           type: string
           enum:
             - ALL_COMMAND_COMPLETED
-#            - ANY_COMMAND_COMPLETED
+            - ANY_COMMAND_COMPLETED
 #            - ANY_COMMAND_CLOSED
 #        activityCommands:
 #          type: array
