use search attribute in GetSearchAttributeResponse instead of KeyValue (#14)
* use search attribute in GetSearchAttributeResponse instead of KeyValue

* update name

--- a/iwf.yaml
+++ b/iwf.yaml
@@ -376,10 +376,10 @@ components:
     WorkflowGetSearchAttributesResponse:
       type: object
       properties:
-        queryAttributes:
+        searchAttributes:
           type: array
           items:
-            $ref: '#/components/schemas/KeyValue'
+            $ref: '#/components/schemas/SearchAttribute'
     WorkflowGetRequest:
       type: object
       required:
