--- a/iwf.yaml
+++ b/iwf.yaml
@@ -287,6 +287,25 @@ components:
           $ref: '#/components/schemas/AttributesLoadingPolicy'
         commandCarryOverPolicy:
           $ref: '#/components/schemas/CommandCarryOverPolicy'
+    WorkflowStartOptions:
+      type: object
+      required:
+        - workflowId
+        - workflowTimeoutSeconds
+      properties:
+        workflowId:
+          type: string
+        workflowTimeoutSeconds:
+          type: integer
+        workflowIDReusePolicy:
+          type: string
+          enum:
+            - ALLOW_DUPLICATE_FAILED_ONLY
+            - ALLOW_DUPLICATE
+            - REJECT_DUPLICATE
+            - TERMINATE_IF_RUNNING
+        cronSchedule:
+          type: string
     AttributesLoadingPolicy:
       type: object
       properties:
@@ -319,18 +338,13 @@ components:
     WorkflowStartRequest:
       type: object
       required:
-        - workflowId
         - iwfWorkerUrl
         - iwfWorkflowType
         - startStateId
-        - workflowTimeoutSeconds
+        - workflowStartOptions
       properties:
-        workflowId:
-          type: string
         iwfWorkflowType:
           type: string
-        workflowTimeoutSeconds:
-          type: integer
         iwfWorkerUrl:
           type: string
         startStateId:
@@ -339,6 +353,8 @@ components:
           $ref: '#/components/schemas/EncodedObject'
         stateOptions:
           $ref: '#/components/schemas/WorkflowStateOptions'
+        workflowStartOptions:
+          $ref: '#/components/schemas/WorkflowStartOptions'
     WorkflowStartResponse:
       type: object
       properties:
