add start workflow options (#17)
* add start workflow options

* Revert "add start workflow options"

This reverts commit 4c285f5000bfc908bb71cd29393de661e2f36948.

* Revert "Revert "add start workflow options""

This reverts commit 22bbb9d1cc9afb35817b1a05f381230f84ff88f5.

* address comment

--- a/iwf.yaml
+++ b/iwf.yaml
@@ -287,6 +287,18 @@ components:
           $ref: '#/components/schemas/AttributesLoadingPolicy'
         commandCarryOverPolicy:
           $ref: '#/components/schemas/CommandCarryOverPolicy'
+    WorkflowStartOptions:
+      type: object
+      properties:
+        workflowIDReusePolicy:
+          type: string
+          enum:
+            - ALLOW_DUPLICATE_FAILED_ONLY
+            - ALLOW_DUPLICATE
+            - REJECT_DUPLICATE
+            - TERMINATE_IF_RUNNING
+        cronSchedule:
+          type: string
     AttributesLoadingPolicy:
       type: object
       properties:
@@ -339,6 +351,8 @@ components:
           $ref: '#/components/schemas/EncodedObject'
         stateOptions:
           $ref: '#/components/schemas/WorkflowStateOptions'
+        workflowStartOptions:
+          $ref: '#/components/schemas/WorkflowStartOptions'
     WorkflowStartResponse:
       type: object
       properties:
