--- a/iwf.yaml
+++ b/iwf.yaml
@@ -333,7 +333,7 @@ components:
 #            - LOAD_ALL_WITH_EXCLUSIVE_LOCK
 #            - LOAD_PARTIAL_WITHOUT_LOCKING
 #            - LOAD_PARTIAL_WITH_EXCLUSIVE_LOCK
-        attributeKeys:
+        partialLoadingKeys:
           type: array
           items:
             type: string
